[package]
name = "riptouch"
version = "0.3.0"
edition = "2021"
description = "A simple touch rip off that can add custom text in the begining."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/BangariSaiAnvesh/riptouch"
repository = "https://github.com/BangariSaiAnvesh/riptouch"
keywords = ["touch", "cli", "custom_text"]
categories = ["command-line-utilities"]
include = [
    "main.rs",
    "Cargo.toml",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
chrono = "0.4"